--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Metro2 Map",
-  "short_name": "MM2",
+  "short_name": "Metro2 Map",
   "icons": [{
       "src": "/img/favicons/icon-16x16.png",
       "sizes": "16x16",
@@ -18,6 +18,7 @@
       "sizes": "512x512",
       "type": "image/png"
     }],
+  "scope": "/",
   "start_url": "/msk/index.html",
   "display": "standalone",
   "background_color": "#FFFFFF",
