--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "breakpoint-sass": "^2.7.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
-    "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^2.6.5"
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "sass": "^1.70.0"
   }
 }
